feat: add config file for dataset name and negative controls

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -31,7 +31,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_NAME = \"RADCURE\""
+    "import yaml\n",
+    "\n",
+    "config = yaml.load(open(\"config/RADCURE.yaml\", \"r\"), Loader=yaml.FullLoader)\n",
+    "\n",
+    "DATASET_NAME = config[\"dataset_name\"]\n",
+    "NEG_CONTROL_REGIONS = config[\"negative_control_regions\"]\n",
+    "NEG_CONTROL_TYPES = config[\"negative_control_types\"]"
    ]
   },
   {
@@ -43,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +61,7 @@
     "    os.makedirs(os.path.join(\"../\", *combo), exist_ok=True)\n",
     "\n",
     "raw_images_dir = f\"rawdata/{DATASET_NAME}/images\"\n",
-    "proc_images_dir = f\"procdata/{DATASET_NAME}/images\"\n",
-    "\n",
-    "# Set up results directory\n",
-    "for combo in itertools.product([\"results\"], [DATASET_NAME], [\"features\", \"analysis/correlations\"]):\n",
-    "    os.makedirs(os.path.join(\"../\", *combo), exist_ok=True)\n"
+    "proc_images_dir = f\"procdata/{DATASET_NAME}/images\""
    ]
   },
   {
@@ -225,7 +227,7 @@
     "    # print(\"----> Original CT image cropped to the ROI bounding box, resized, and saved.\")\n",
     "\n",
     "    # Process the negative control CT images\n",
-    "    for negative_control in itertools.product(negative_control_types, negative_control_regions):\n",
+    "    for negative_control in itertools.product(NEG_CONTROL_TYPES, NEG_CONTROL_REGIONS):\n",
     "        # Make negative control image using READII\n",
     "        negative_control_ct_image = applyNegativeControl(ct_image, \n",
     "                                                         negativeControlType=negative_control[0], \n",
