fix: fixes applied when multiple data points run
- update where raw and procdata directories are made
- change roi_matches setup so roi_name variable is used
- remove wrong / in cropped_images_dir path creation
- remove nested list around data in fmcib_input_df, change to dictionary input

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "\n",
     "# Set up raw and processed data directories\n",
     "for combo in itertools.product([\"rawdata\", \"procdata\"], [DATASET_NAME], [\"clinical\", \"images\"]):\n",
-    "    os.makedirs(os.path.join(\"../\", *combo), exist_ok=True)\n",
+    "    os.makedirs(os.path.join(*combo), exist_ok=True)\n",
     "\n",
     "raw_images_dir = f\"rawdata/{DATASET_NAME}/images\"\n",
     "proc_images_dir = f\"procdata/{DATASET_NAME}/images\""
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
     "\n",
     "roi_name = \"GTV\"\n",
-    "roi_matches = dict(roi_name = \"GTVp$\")\n",
+    "roi_matches = {roi_name: \"GTVp$\"}\n",
     "\n",
     "with open(f\"{raw_images_dir}/mit_roi_names.yaml\", \"w\") as outfile:\n",
     "    yaml.dump(roi_matches, outfile)"
@@ -109,22 +109,80 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-12-02T16:28:00-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mThe dataset has already been indexed. Use --update to force update.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mimgtools\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mops.__init__:218\u001b[0m\n"
+      "100%|██████████| 14/14 [00:00<00:00, 10794.16it/s]\n",
+      "/Users/katyscott/Documents/READII-2-ROQC/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/imgtools/modules/datagraph.py:430: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  relevant_study_id = self.df_new.loc[(self.df_new.edge_type.str.contains(regex_term)), \"study_x\"].unique()\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset already processed...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/katyscott/Documents/READII-2-ROQC/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/imgtools/modules/datagraph.py:430: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
-      "  relevant_study_id = self.df_new.loc[(self.df_new.edge_type.str.contains(regex_term)), \"study_x\"].unique()\n"
+      "6_RADCURE-03199_RADCURE-0314\n",
+      "\n",
+      "3_RADCURE-0183\n",
+      "Processing: 3_RADCURE-0183\n",
+      "Processing: 9_RADCURE-0314\n",
+      "Processing: 6_RADCURE-0319\n",
+      "2_RADCURE-0317\n",
+      "Processing: 2_RADCURE-0317\n",
+      "8_RADCURE-0112\n",
+      "Processing: 8_RADCURE-0112\n",
+      "1_RADCURE-0171\n",
+      "Processing: 1_RADCURE-0171\n",
+      "11_RADCURE-0287\n",
+      "Processing: 11_RADCURE-0287\n",
+      "7_RADCURE-0252\n",
+      "Processing: 7_RADCURE-0252\n",
+      "6_RADCURE-0319  start\n",
+      "2_RADCURE-0317  start\n",
+      "9_RADCURE-0314  start\n",
+      "11_RADCURE-0287  start\n",
+      "7_RADCURE-0252  start\n",
+      "6_RADCURE-0319  SAVED IMAGE\n",
+      "8_RADCURE-0112  start\n",
+      "6_RADCURE-0319 SAVED MASK ON CT\n",
+      "4_RADCURE-0131\n",
+      "Processing: 4_RADCURE-0131\n",
+      "3_RADCURE-0183  start\n",
+      "2_RADCURE-0317  SAVED IMAGE\n",
+      "11_RADCURE-0287  SAVED IMAGE\n",
+      "9_RADCURE-0314  SAVED IMAGE\n",
+      "2_RADCURE-0317 SAVED MASK ON CT\n",
+      "5_RADCURE-0065\n",
+      "Processing: 5_RADCURE-0065\n",
+      "1_RADCURE-0171  start\n",
+      "9_RADCURE-0314 SAVED MASK ON CT\n",
+      "12_RADCURE-0099\n",
+      "Processing: 12_RADCURE-0099\n",
+      "11_RADCURE-0287 SAVED MASK ON CT\n",
+      "10_RADCURE-0244\n",
+      "Processing: 10_RADCURE-0244\n",
+      "3_RADCURE-0183  SAVED IMAGE\n",
+      "4_RADCURE-0131  start\n",
+      "3_RADCURE-0183 SAVED MASK ON CT\n",
+      "12_RADCURE-0099  start\n",
+      "7_RADCURE-0252  SAVED IMAGE\n",
+      "0_RADCURE-0020\n",
+      "Processing: 0_RADCURE-0020\n",
+      "7_RADCURE-0252 SAVED MASK ON CT\n",
+      "8_RADCURE-0112  SAVED IMAGE\n",
+      "4_RADCURE-0131  SAVED IMAGE\n",
+      "5_RADCURE-0065  start\n",
+      "8_RADCURE-0112 SAVED MASK ON CT\n",
+      "4_RADCURE-0131 SAVED MASK ON CT\n",
+      "12_RADCURE-0099  SAVED IMAGE\n",
+      "0_RADCURE-0020  start\n",
+      "12_RADCURE-0099 SAVED MASK ON CT\n",
+      "10_RADCURE-0244  start\n",
+      "1_RADCURE-0171  SAVED IMAGE\n",
+      "1_RADCURE-0171 SAVED MASK ON CT\n",
+      "0_RADCURE-0020  SAVED IMAGE\n",
+      "0_RADCURE-0020 SAVED MASK ON CT\n",
+      "5_RADCURE-0065  SAVED IMAGE\n",
+      "5_RADCURE-0065 SAVED MASK ON CT\n",
+      "10_RADCURE-0244  SAVED IMAGE\n",
+      "10_RADCURE-0244 SAVED MASK ON CT\n"
      ]
     }
    ],
@@ -141,7 +199,8 @@
     "                        spacing=(0., 0., 0.),\n",
     "                        read_yaml_label_names = True,\n",
     "                        ignore_missing_regex = True,\n",
-    "                        roi_yaml_path = roi_yaml_path\n",
+    "                        roi_yaml_path = roi_yaml_path,\n",
+    "                        update=True\n",
     "                        )\n",
     "\n",
     "pipeline.run()"
@@ -156,18 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce176e86ed6d43ddb62be6fc7afb012f",
+       "model_id": "ef7e87abcc804237921a292763bd70ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
+       "  0%|          | 0/13 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -188,7 +247,7 @@
     "\n",
     "# Set up the output directories for all the READII processed images\n",
     "# Make main output directory for cropped nifti images\n",
-    "cropped_images_dir = os.path.join(proc_images_dir, \"/cropped_images\")\n",
+    "cropped_images_dir = os.path.join(proc_images_dir, \"cropped_images\")\n",
     "\n",
     "# Make output directory for the original CT\n",
     "cropped_original_dir = os.path.join(cropped_images_dir, \"original\")\n",
@@ -251,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +323,7 @@
     "                             for image in os.listdir(os.path.join(cropped_images_dir, image_type))]\n",
     "    \n",
     "    # Create a dataframe with these image paths and all coordinates set to 0\n",
-    "    fmcib_input_df = pd.DataFrame(columns=[\"image_path\"], data = [image_type_file_paths])\n",
+    "    fmcib_input_df = pd.DataFrame(data = {\"image_path\": image_type_file_paths})\n",
     "    fmcib_input_df[\"coordX\"] = 0\n",
     "    fmcib_input_df[\"coordY\"] = 0\n",
     "    fmcib_input_df[\"coordZ\"] = 0\n",
