refactor: move imports to top, switch os to pathlib, improve FMCIB input file creation

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -48,10 +48,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "import itertools\n",
+    "import pandas as pd\n",
+    "import SimpleITK as sitk \n",
     "import yaml\n",
+    "\n",
+    "from imgtools.autopipeline import AutoPipeline\n",
     "from pathlib import Path\n",
-    "import itertools \n",
-    "import csv"
+    "from readii.negative_controls import applyNegativeControl\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "import sys; sys.path.append(\"code\")\n",
+    "from process_readii import find_bbox, crop_bbox"
    ]
   },
   {
@@ -63,11 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = yaml.load(open(\"config/RADCURE.yaml\", \"r\"), Loader=yaml.FullLoader)\n",
+    "config = yaml.load(open(Path(\"config/RADCURE.yaml\"), \"r\"), Loader=yaml.FullLoader)\n",
     "\n",
     "DATASET_NAME = config[\"dataset_name\"]\n",
     "NEG_CONTROL_REGIONS = config[\"negative_control_regions\"]\n",
@@ -83,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "for combo in itertools.product([\"rawdata\", \"procdata\"], [DATASET_NAME], [\"clinical\", \"images\"]):\n",
     "    Path(*combo).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "raw_images_dir = f\"rawdata/{DATASET_NAME}/images\"\n",
-    "proc_images_dir = f\"procdata/{DATASET_NAME}/images\""
+    "raw_images_dir = Path(\"rawdata\", DATASET_NAME , \"images\")\n",
+    "proc_images_dir = Path(\"procdata\", DATASET_NAME, \"images\")"
    ]
   },
   {
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,24 +892,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mit_output_dir = proc_images_dir / \"mit_outputs\"\n",
+    "modalities = \"CT,RTSTRUCT\"\n",
+    "roi_yaml_path = raw_images_dir / \"mit_roi_names.yaml\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 31%|███▏      | 224/714 [00:33<01:18,  6.28it/s]"
+      "100%|██████████| 714/714 [01:50<00:00,  6.45it/s]\n",
+      "/home/bioinf/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/imgtools/modules/datagraph.py:430: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  relevant_study_id = self.df_new.loc[(self.df_new.edge_type.str.contains(regex_term)), \"study_x\"].unique()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset already processed...\n"
      ]
     }
    ],
    "source": [
-    "from imgtools.autopipeline import AutoPipeline\n",
-    "\n",
-    "mit_output_dir = f\"{proc_images_dir}/mit_outputs\"\n",
-    "modalities = \"CT,RTSTRUCT\"\n",
-    "roi_yaml_path = f\"{raw_images_dir}/mit_roi_names.yaml\"\n",
-    "\n",
     "pipeline = AutoPipeline(input_directory=raw_images_dir,\n",
     "                        output_directory=mit_output_dir,\n",
     "                        modalities=modalities,\n",
@@ -923,35 +946,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import SimpleITK as sitk\n",
-    "from readii.negative_controls import applyNegativeControl\n",
-    "from tqdm.notebook import tqdm, trange\n",
-    "\n",
-    "import sys; sys.path.append(\"code\")\n",
-    "from process_readii import find_bbox, crop_bbox\n",
-    "\n",
     "# Read in the dataset.csv file made by med-imagetools autopipeline\n",
-    "images_metadata = pd.read_csv(os.path.join(mit_output_dir, \"dataset.csv\"), index_col=0)\n",
+    "images_metadata = pd.read_csv(Path(mit_output_dir, \"dataset.csv\"), index_col=0)\n",
     "\n",
     "# Set up the output directories for all the READII processed images\n",
     "# Make main output directory for cropped nifti images\n",
-    "cropped_images_dir = os.path.join(proc_images_dir, \"cropped_images\")\n",
+    "cropped_images_dir = proc_images_dir / \"cropped_images\"\n",
     "\n",
     "# Make output directory for the original CT\n",
-    "cropped_original_dir = os.path.join(cropped_images_dir, \"original\")\n",
-    "os.makedirs(cropped_original_dir, exist_ok=True)\n",
+    "cropped_original_dir = cropped_images_dir / \"original\"\n",
+    "Path.mkdir(cropped_original_dir, parents=True, exist_ok=True)\n",
     "\n",
     "# Make list of negative control types and regions\n",
     "# Regions refer to what portion of the CT image to apply the negative control to\n",
     "# Types refer to what will be done with the voxels of the CT image in the region\n",
     "negative_control_regions = [\"full\", \"roi\", \"non_roi\"]\n",
-    "negative_control_types = [\"shuffled\", \"randomized_sampled\"]\n",
-    "\n",
+    "negative_control_types = [\"shuffled\", \"randomized_sampled\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for image_idx in tqdm(images_metadata.index):\n",
     "    image_idx_metadata = images_metadata.loc[image_idx]\n",
     "\n",
@@ -959,10 +981,10 @@
     "    # print(f\"Processing {patient_ID}...\")\n",
     "\n",
     "    # Load in the CT image output from med-imagetools\n",
-    "    ct_image = sitk.ReadImage(os.path.join(mit_output_dir, image_idx, \"CT\", \"CT.nii.gz\"))\n",
+    "    ct_image = sitk.ReadImage(Path(mit_output_dir, image_idx, \"CT\", \"CT.nii.gz\"))\n",
     "    \n",
     "    # Load in the RTSTRUCT image output from med-imagetools\n",
-    "    roi_image = sitk.ReadImage(os.path.join(mit_output_dir, image_idx, \"RTSTRUCT_CT\", f\"{roi_name}.nii.gz\"))\n",
+    "    roi_image = sitk.ReadImage(Path(mit_output_dir, image_idx, \"RTSTRUCT_CT\", f\"{roi_name}.nii.gz\"))\n",
     "\n",
     "    # print(\"----> CT and RTSTRUCT loaded.\")\n",
     "\n",
@@ -974,7 +996,7 @@
     "    cropped_ct_image = crop_bbox(ct_image, bounding_box, (50, 50, 50))\n",
     "    \n",
     "    # Save the cropped CT image to the cropped_original_dir\n",
-    "    cropped_output_path = os.path.join(cropped_original_dir, f\"{patient_ID}.nii.gz\")\n",
+    "    cropped_output_path = cropped_original_dir / f\"{patient_ID}.nii.gz\"\n",
     "    sitk.WriteImage(cropped_ct_image, cropped_output_path)\n",
     "    # print(\"----> Original CT image cropped to the ROI bounding box, resized, and saved.\")\n",
     "\n",
@@ -991,38 +1013,40 @@
     "        cropped_nc_ct_image = crop_bbox(negative_control_ct_image, bounding_box, (50, 50, 50))\n",
     "\n",
     "        # Set up the directory to save the cropped negative control CT images\n",
-    "        cropped_nc_dir = os.path.join(cropped_images_dir, f\"{negative_control[0]}_{negative_control[1]}\")\n",
-    "        if not os.path.exists(cropped_nc_dir):\n",
-    "            os.mkdir(cropped_nc_dir)\n",
+    "        cropped_nc_dir = cropped_images_dir / f\"{negative_control[0]}_{negative_control[1]}\"\n",
+    "        Path.mkdir(cropped_nc_dir, parents=True, exist_ok=True)\n",
     "\n",
     "        # Save the cropped negative control CT image\n",
-    "        cropped_nc_output_path = os.path.join(cropped_nc_dir, f\"{patient_ID}.nii.gz\")\n",
+    "        cropped_nc_output_path = cropped_nc_dir / f\"{patient_ID}.nii.gz\"\n",
     "        sitk.WriteImage(cropped_nc_ct_image, cropped_nc_output_path)\n",
     "        # print(f\"----> Negative control {negative_control[0]}_{negative_control[1]} cropped to the ROI bounding box, resized, and saved.\")  "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up expected input file for FMCIB"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make the input CSV file for FMCIB for each CT type\n",
-    "os.makedirs(os.path.join(proc_images_dir, \"fmcib_input\"), exist_ok=True)\n",
-    "\n",
-    "for image_type in sorted(os.listdir(cropped_images_dir)):\n",
-    "    # Get the full paths to the files in each image type directory\n",
-    "    image_type_file_paths = [os.path.join(cropped_images_dir, image_type, image) \n",
-    "                             for image in os.listdir(os.path.join(cropped_images_dir, image_type))]\n",
+    "for image_type_dir_path in sorted(cropped_images_dir.glob(\"*\")):\n",
+    "    image_type = image_type_dir_path.name\n",
     "    \n",
+    "    image_type_file_paths = sorted(image_type_dir_path.glob(\"*.nii.gz\"))\n",
+    "\n",
     "    # Create a dataframe with these image paths and all coordinates set to 0\n",
     "    fmcib_input_df = pd.DataFrame(data = {\"image_path\": image_type_file_paths})\n",
     "    fmcib_input_df[\"coordX\"] = 0\n",
     "    fmcib_input_df[\"coordY\"] = 0\n",
     "    fmcib_input_df[\"coordZ\"] = 0\n",
     "\n",
-    "    # Write the CSV file\n",
-    "    fmcib_input_df.to_csv(os.path.join(proc_images_dir, \"fmcib_input\", f\"fmcib_input_{DATASET_NAME}_{image_type}.csv\"), index=False)\n"
+    "    fmcib_input_df.to_csv(Path(proc_images_dir, \"fmcib_input\", f\"fmcib_input_{DATASET_NAME}_{image_type}.csv\"), index=False)"
    ]
   },
   {
