docs: update title

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code to run READII negative controls through FMCIB\n",
+    "# Code to create READII negative controls to run through FMCIB\n",
     "\n",
     "This code utilizes the RADCURE dataset from TCIA. This dataset is under the TCIA Restricted License, so users will need to request access prior to running this code.\n",
     "\n",
