feat: add step to setting up kernel

--- a/run_fmcib.ipynb
+++ b/run_fmcib.ipynb
@@ -27,7 +27,9 @@
     "    ```bash\n",
     "    $ pixi install\n",
     "\n",
-    "    $ pixi run make_kernel\n",
+    "    $ pixi shell -e fmcib\n",
+    "\n",
+    "    $ ipython kernel install --user --name=fmcib --display-name=fmcib\n",
     "    ```\n",
     "\n",
     "2. In the `Select Kernel` menu at the top right of the notebook, select `Jupyter Kernel` as the source. \n",
@@ -118,7 +120,47 @@
       "2024-12-17 18:40:15.056 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
       "\n",
       "2024-12-17 18:40:15.088 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
-      " 29%|██▉       | 20/68 [00:07<00:19,  2.43it/s]"
+      "100%|██████████| 68/68 [00:22<00:00,  3.01it/s]\n",
+      "2024-12-17 18:40:38.514 | INFO     | fmcib.run:get_features:25 - Loading CSV file ...\n",
+      "2024-12-17 18:40:38.518 | INFO     | fmcib.preprocessing:get_dataloader:48 - Building dataloader instance ...\n",
+      "You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "2024-12-17 18:40:41.393 | WARNING  | fmcib.models.load_model:load:104 - Missing keys: [] and unexpected keys: []\n",
+      "2024-12-17 18:40:41.394 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
+      "\n",
+      "2024-12-17 18:40:41.427 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
+      "100%|██████████| 68/68 [00:18<00:00,  3.68it/s]\n",
+      "2024-12-17 18:41:00.750 | INFO     | fmcib.run:get_features:25 - Loading CSV file ...\n",
+      "2024-12-17 18:41:00.753 | INFO     | fmcib.preprocessing:get_dataloader:48 - Building dataloader instance ...\n",
+      "You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "2024-12-17 18:41:03.597 | WARNING  | fmcib.models.load_model:load:104 - Missing keys: [] and unexpected keys: []\n",
+      "2024-12-17 18:41:03.598 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
+      "\n",
+      "2024-12-17 18:41:03.628 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
+      "100%|██████████| 68/68 [00:19<00:00,  3.51it/s]\n",
+      "2024-12-17 18:41:23.766 | INFO     | fmcib.run:get_features:25 - Loading CSV file ...\n",
+      "2024-12-17 18:41:23.786 | INFO     | fmcib.preprocessing:get_dataloader:48 - Building dataloader instance ...\n",
+      "You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "2024-12-17 18:41:26.622 | WARNING  | fmcib.models.load_model:load:104 - Missing keys: [] and unexpected keys: []\n",
+      "2024-12-17 18:41:26.623 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
+      "\n",
+      "2024-12-17 18:41:26.655 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
+      "100%|██████████| 68/68 [00:18<00:00,  3.74it/s]\n",
+      "2024-12-17 18:41:45.678 | INFO     | fmcib.run:get_features:25 - Loading CSV file ...\n",
+      "2024-12-17 18:41:45.697 | INFO     | fmcib.preprocessing:get_dataloader:48 - Building dataloader instance ...\n",
+      "You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "2024-12-17 18:41:48.519 | WARNING  | fmcib.models.load_model:load:104 - Missing keys: [] and unexpected keys: []\n",
+      "2024-12-17 18:41:48.520 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
+      "\n",
+      "2024-12-17 18:41:48.549 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
+      "100%|██████████| 68/68 [00:18<00:00,  3.73it/s]\n",
+      "2024-12-17 18:42:07.604 | INFO     | fmcib.run:get_features:25 - Loading CSV file ...\n",
+      "2024-12-17 18:42:07.611 | INFO     | fmcib.preprocessing:get_dataloader:48 - Building dataloader instance ...\n",
+      "You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "2024-12-17 18:42:10.472 | WARNING  | fmcib.models.load_model:load:104 - Missing keys: [] and unexpected keys: []\n",
+      "2024-12-17 18:42:10.473 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
+      "\n",
+      "2024-12-17 18:42:10.507 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
+      " 28%|██▊       | 19/68 [00:05<00:13,  3.60it/s]"
      ]
     }
    ],
