docs: clean up section headers and markdown generally

--- a/run_fmcib.ipynb
+++ b/run_fmcib.ipynb
@@ -4,24 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code to run READII negative controls through FMCIB\n",
+    "# Run original and READII negative control CTs through FMCIB\n",
     "\n",
-    "This code utilizes the RADCURE dataset from TCIA. This dataset is under the TCIA Restricted License, so users will need to request access prior to running this code.\n",
+    "This notebook is set up to use outputs from the `run_readii_prep.ipynb` notebook. \n",
     "\n",
-    "We will be using the RADCURE test subset specified in the clinical data sheet. "
+    "CT images cropped around a Gross Tumour Volume (GTV), resized, and saved as nifti files are fed into an instance of FMCIB for inference and all features are saved."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up pixi environment kernel"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Set up pixi environment kernel\n",
+    "\n",
     "1. Run the following commands in the terminal:\n",
     "\n",
     "    ```bash\n",
@@ -34,7 +29,7 @@
     "\n",
     "2. In the `Select Kernel` menu at the top right of the notebook, select `Jupyter Kernel` as the source. \n",
     "\n",
-    "3. Refresh the options and one called `readii-fmcib` should appear. Select this option."
+    "3. Refresh the options and one called `fmcib` should appear. Select this option."
    ]
   },
   {
@@ -59,6 +54,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize dataset name and negative control settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -69,6 +71,13 @@
     "DATASET_NAME = config[\"dataset_name\"]\n",
     "NEG_CONTROL_REGIONS = config[\"negative_control_regions\"]\n",
     "NEG_CONTROL_TYPES = config[\"negative_control_types\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up data directories"
    ]
   },
   {
@@ -86,6 +95,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate list of image types to run through FMCIB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -97,8 +113,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run each image type through FMCIB and save out the resulting features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +183,7 @@
       "2024-12-17 18:42:10.473 | INFO     | fmcib.models.load_model:load:129 - Loaded pretrained model weights \n",
       "\n",
       "2024-12-17 18:42:10.507 | INFO     | fmcib.run:get_features:47 - Running inference over batches ...\n",
-      " 28%|██▊       | 19/68 [00:05<00:13,  3.60it/s]"
+      "100%|██████████| 68/68 [00:28<00:00,  2.40it/s]\n"
      ]
     }
    ],
