--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code to create READII negative controls to run through FMCIB\n",
+    "# Create READII negative control CTs to run through FMCIB\n",
     "\n",
     "This code utilizes the RADCURE dataset from TCIA. This dataset is under the TCIA Restricted License, so users will need to request access prior to running this code.\n",
     "\n",
@@ -15,13 +15,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up pixi environment kernel"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Set up pixi environment kernel\n",
+    "\n",
     "1. Run the following commands in the terminal:\n",
     "\n",
     "    ```bash\n",
@@ -67,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize dataset name"
+    "## Initialize dataset name and negative control settings"
    ]
   },
   {
@@ -887,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run med-imagetools"
+    "## Run med-imagetools to get converted nifti files and get dataset summary file"
    ]
   },
   {
@@ -1073,7 +1068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
