--- a/run_fmcib.ipynb
+++ b/run_fmcib.ipynb
@@ -88,10 +88,7 @@
    "source": [
     "# Set up results directory\n",
     "features_dir = Path(\"results\", DATASET_NAME, \"fmcib_features\")\n",
-    "Path.mkdir(features_dir, parents=True, exist_ok=True)\n",
-    "\n",
-    "correlations_dir = Path(\"results\", DATASET_NAME, \"analysis\", \"correlations\")\n",
-    "Path.mkdir(correlations_dir, parents=True, exist_ok=True)"
+    "Path.mkdir(features_dir, parents=True, exist_ok=True)"
    ]
   },
   {
