refactor: use readii function for config loading

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -51,6 +51,7 @@
     "\n",
     "from imgtools.autopipeline import AutoPipeline\n",
     "from pathlib import Path\n",
+    "from readii.io.loaders import loadImageDatasetConfig\n",
     "from readii.negative_controls import applyNegativeControl\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -71,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = yaml.load(open(Path(\"config/RADCURE.yaml\"), \"r\"), Loader=yaml.FullLoader)\n",
+    "config = loadImageDatasetConfig(\"RADCURE\", Path(\"config\"))\n",
     "\n",
     "DATASET_NAME = config[\"dataset_name\"]\n",
     "NEG_CONTROL_REGIONS = config[\"negative_control_regions\"]\n",
